# NFC_exploration

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  build.sh  build_android.sh  codex.md  context.md  flash.sh
android/: README.md
android/InkiHello_androidstudio/app/: build.gradle.kts
android/InkiHello_androidstudio/app/src/androidTest/java/de/c0de111/inki/nfc/taptobook/: ExampleInstrumentedTest.kt
android/InkiHello_androidstudio/app/src/main/: AndroidManifest.xml
android/InkiHello_androidstudio/app/src/main/java/de/c0de111/inki/hello/: MainActivity.kt
android/InkiHello_androidstudio/app/src/main/res/layout/: activity_main.xml
android/InkiHello_androidstudio/app/src/main/res/values/: strings.xml
android/InkiHello_androidstudio/app/src/test/java/de/c0de111/inki/nfc/taptobook/: ExampleUnitTest.kt
android/InkiNfcTapToBook_androidstudio/app/: build.gradle.kts
android/InkiNfcTapToBook_androidstudio/app/src/main/: AndroidManifest.xml
android/InkiNfcTapToBook_androidstudio/app/src/main/java/de/c0de111/inki/nfc/taptobook/: MainActivity.kt
android/InkiNfcTapToBook_androidstudio/app/src/main/res/layout/: activity_main.xml
android/InkiNfcTapToBook_androidstudio/app/src/main/res/values/: strings.xml
android/inki_nfc_tap_to_book/: README.md  REQUEST_FORMAT.md
android/inki_nfc_tap_to_book/app/src/main/: AndroidManifest.xml
android/inki_nfc_tap_to_book/app/src/main/java/de/c0de111/inki/nfc/taptobook/: MainActivity.kt
android/inki_nfc_tap_to_book/app/src/main/res/layout/: activity_main.xml
android/scripts/: build_and_sync_apk.sh
docs/: context.md
firmware/: CMakeLists.txt  README.md
firmware/c/: CMakeLists.txt  README.md  build.sh  flash.sh  main.c  reset.sh
firmware/include/: README.md
firmware/nfc_harness/: main.c
firmware/scripts/: build.sh  flash.sh
firmware/src/: main.c  tune_main.c
pcb/NFC_harness_V0/: #auto_saved_files#  NFC_harness_V0.kicad_pcb  NFC_harness_V0.kicad_prl  NFC_harness_V0.kicad_pro  NFC_harness_V0.kicad_sch  fp-lib-table  net.xml  sym-lib-table
pcb/NFC_harness_V0/Taster.pretty/: Taster 9313.kicad_mod
pcb/NFC_harness_V0/cam/pcb2gcode/input/: NFC_harness_V0-Edge_Cuts.gbr  NFC_harness_V0-F_Cu.gbr  NFC_harness_V0-F_Paste.gbr  NFC_harness_V0-NPTH.drl  NFC_harness_V0-PTH.drl  NFC_harness_V0.drl
pcb/NFC_harness_V0/cam/pcb2gcode/output/: NFC_harness_V0-Edge_Cuts.gbr  NFC_harness_V0-F_Cu.gbr  NFC_harness_V0-F_Paste.gbr  NFC_harness_V0-NPTH.drl  NFC_harness_V0-PTH.drl  NFC_harness_V0_drill.nc  NFC_harness_V0_front.nc  NFC_harness_V0_outline.nc  NFC_harness_V0_paste.nc
pcb/NFC_harness_V0/cam/pcb2gcode/profiles/: default.millprojects
pcb/NFC_harness_V0/component_lib/: 3314G-1-204E.dcm  3314G-1-204E.kicad_sym  JZ400.kicad_sym  SMS7630-006LF.dcm  SMS7630-006LF.kicad_sym
pcb/NFC_harness_V0/component_lib/footprints/JZ400.pretty/: JZ400.kicad_mod  JZ400.stp
pcb/NFC_harness_V0/component_lib/footprints/Pot_3314G.pretty/: 3314G-1-102E.kicad_mod
pcb/project-libraries/ST25DV04KC-IE6S3/: part_info.txt
pcb/project-libraries/ST25DV04KC-IE6S3/KiCad/: SOIC127P600X175-8N.kicad_mod  ST25DV04KC-IE6S3.dcm  ST25DV04KC-IE6S3.epw  ST25DV04KC-IE6S3.kicad_sym  ST25DV04KC-IE6S3.lib  ST25DV04KC-IE6S3.mod
pcb/tools/: run_pcb2gcode.sh
